# dataframe_to_online_spreadsheet

./: .gitignore  README.md  pyproject.toml
src/dataframe_to_online_spreadsheet/: feishu.py  wecom.py
tests/: test_data1_wecom.csv  test_data1_wecom2.csv  test_data3.csv  test_feishu.py  test_wecom.py
