[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataframe_to_online_spreadsheet"
version = "0.1.13"
authors = [
  { name="Kafka Liu", email="kafka.liu@gmail.com" },
]
description = "Export a pandas dataframe to a online spreadsheet."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kafkaliu/dataframe_to_online_spreadsheet"
Issues = "https://github.com/kafkaliu/dataframe_to_online_spreadsheet/issues"

[tool.pytest.ini_options]
log_cli_level = "INFO"

[tool.hatch.build]
exclude = [".env", ".vscode", "tests/*"]